# qtanner-search

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  pyproject.toml  test_base_k_filter_unittest.py
best_codes/: README.md  app.js  app_simple.js  best_by_group_k.tsv  data.json  details.html  index.html  index.tsv  min_trials_by_group.json  simple.html  style.css
docs/: CLEANUP_SPEC.md  COMMANDS.md  LRZ_paper_codes_extracted.json  LRZ_paper_codes_extracted.md  WORKFLOWS_CURRENT.md  refined_distances.md  search_progressive_cli.md
notes/: search_log.aux  search_log.out  search_log.tex
reports/: trials_to_increase.md
results/: best_by_n.json  best_by_nk.json  best_current.json  search_w9_smallgroups.BROKEN.jsonl
scripts/: #run_c2xc2xc2_d16.sh#  .#run_c2xc2xc2_d16.sh  NEXT_STEPS_w9.md  README.md  _best_codes_common.py  _ensure_python.py  analyze_classical_mtx.py  analyze_slice_dir.py  bench_dist_m4ri_vs_qdistrnd.sh  bench_rw_vs_qdistrnd.sh  bench_rw_vs_qdistrnd_noreadmtxe.sh  build_one.py  campaign_c2xc2xc2_d16.sh  collect_best_codes.py  compare_index_tsv.py  ensure_best_codes_data_json_from_meta.py  estimate_distance_qdistrnd.py  extract_lrz_paper_codes.sh  generate_best_codes_site.py  groups_order_lt20.txt  list_groups_order_lt20.sh  lrz_recover_b2.py  lrz_recover_w9.py  migrate_collected_meta_from_summary.py  patch_data_json_from_meta.py  patch_lift_matrices_group_dict.py  prune_best_codes_group.py  publish_best_codes_from_meta.sh  publish_best_codes_group.py  publish_best_codes_group.sh  py  rebuild_best_codes_artifacts_from_meta.py  refine_best_codes.py  (+53 more)
(+9740 files in other folders)
