[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtanner-search"
version = "0.1.0"
description = "Quantum Tanner code search utilities (LRZ)."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
qtanner = "qtanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
